# NewCL

./: .gitignore  .suite-out.txt  Cargo.toml  MANIFESTO.md  README.md  bench.lisp  bouncing-long.lisp  bouncing-watchdog.lisp  demo-load-probe.lisp  demo-smoke-pick.lisp  demo-smoke.lisp  deriv-test.lisp  ifstar-test.lisp  ifstar-trace.lisp  lazy-test.lisp  memo-fib.lisp  memo-test.lisp  memo-trace.lisp  park-smoke.lisp  probe.lisp  random-smoke.lisp  run-gui.bat  run-ledit.lisp  smoke-gui.lisp  test-mv.lisp  test-port.lisp  test-symbols.lisp  time-smoke.lisp  trace-gf-test.lisp  trace-test.lisp  trace.lisp  trivial.lisp
.cargo/: config.toml
Lisp/: clos.lisp  core.lisp
Lisp/demos/: baby-gui.lisp  bouncing.lisp  buttons.lisp  canvas-demo.lisp  click-counter.lisp  clos-tour.lisp  draw-square.lisp  eval-buffer-probe.lisp  f5-popup.lisp  gui-repl.lisp  heap-monitor.lisp  hello-igui.lisp  insults-gui.lisp  life-gui.lisp  mandelbrot.lisp  minesweepers-gui.lisp  native-repl.lisp  othello-gui.lisp  othello-repl.lisp  paint-and-log.lisp  shapes.lisp  text-styles.lisp
bench/: after-rootstack.txt  after-tier1-final.txt  baseline-run1.txt  baseline-run2.txt  bench.lisp  gauntlet.lisp  zebra-gc.lisp  zebra-leak.lisp  zebra-sbcl.lisp  zebra-time.lisp
crates/doc-crate/: Cargo.toml
crates/doc-crate/src/: main.rs
crates/docpane/: Cargo.toml
crates/selkie/: Cargo.toml
demos/: ansi-runner.lisp  audio.lisp  canvas-demo.lisp  closures.lisp  conses.lisp  hellowin.lisp  life.lisp  mandelbrot.lisp  pressure.lisp  prolog.lisp  test-macrolet.lisp  test-rf2.lisp
docs/: BIGNUMS.md  GC.md  GC_CHUNKED_INVARIANTS.md  GC_DESIGN.md  GC_DESIGN_REVIEW_2.md  GC_FLOW.md  GC_HEAP_WALK_CLOSURE.md  GC_LESSONS.md  GC_PRECISE_ROOTS_PLAN.md  JOURNAL.md  MayMonthlyReview.md  NCL_GC_REPLY.md  WINDOWS_FFI.md  ansi-killers.md  build_node_1.md  build_node_2.md  build_node_3.md  compiler_completion.md  crash-recovery.md  editor.md  gc_bughunt_tinyleak.md  gc_thoughts.md  getting-started.md  index.md  keyboard-shortcuts.md  long_ans_tail.md  ncl-perf-bug-plan.md  performance-unbox-float.md  repl.md  the_seg_windup.md  user_guide.md  windows-surface.md
docs/user/: control-flow.md  functions.md  gc.md  getting-started.md  index.md  lists.md  macros.md  numbers.md  pipeline.md  repl.md  variables.md
packs/: windows_api.pack
scripts/: generate_win32_pack.py
src/ncl-cl/: Cargo.toml
src/ncl-cl/src/: lib.rs
src/ncl-compiler/: Cargo.toml
src/ncl-compiler/src/: inline.rs  lib.rs  lower.rs  macroexpand.rs  optimize.rs
src/ncl-driver/: Cargo.toml  build.rs
src/ncl-driver/src/: main.rs
src/ncl-ir/: Cargo.toml
src/ncl-ir/src/: lib.rs
src/ncl-llvm/: Cargo.toml
src/ncl-llvm/src/: jit_mm.rs  lib.rs
src/ncl-loader/: Cargo.toml
src/ncl-loader/src/: lib.rs
src/ncl-reader/: Cargo.toml
src/ncl-reader/src/: lexer.rs  lib.rs  numbers.rs  parser.rs  readtable.rs  token.rs
src/ncl-runtime/: Cargo.toml
src/ncl-runtime/src/: abi.rs  audio.rs  bignum.rs  brk.rs  chars.rs  complex.rs  file_sys.rs  float.rs  format.rs  gc.rs  gc_function.rs  gc_string.rs  gc_symbol.rs  heap.rs  heap_backend.rs  heap_common.rs  hot_reload.rs  lib.rs  mutator.rs  printer.rs  random.rs  ratio.rs  stack_map.rs  static_area.rs  sym_names.rs  symbol.rs  threads.rs  universe.rs  value.rs  win_buffer.rs  win_callback.rs  win_ffi.rs  win_metadata.rs  win_surface.rs  word.rs
src/ncl-runtime/src/igui/: batch.rs  canvas.rs  channels.rs  child.rs  cp_exports.rs  crash_handler.rs  crash_view.rs  doc_pane.rs  executor.rs  help_pane.rs  ledit.rs  lisp_shims.rs  menu.rs  mod.rs  repl_child.rs  splash.rs  tools_menu.rs  window.rs
src/ncl-runtime/src/page_heap/: alloc.rs  coordinator_api.rs  cycle.rs  evac.rs  mark.rs  mod.rs  page_desc.rs  pin.rs  scanner.rs  space.rs
tests/conservative-pin/: README.md  alloc-test.lisp  gc-watch.lisp  stress.lisp
tests/ncl-corman-demos/: Cargo.toml
tests/ncl-corman-demos/src/: lib.rs
tests/ncl-corman-demos/tests/: corpus.rs
tests/ncl-tests/: Cargo.toml
tests/ncl-tests/src/: lib.rs
tests/ncl-tests/tests/: characters.rs  closure_depth.rs  declare_special.rs  describe.rs  do_macros.rs  funcell_natives.rs  hash_tables.rs  lists.rs  numbers.rs  places.rs  sequences_ext.rs  smoke_corman.rs  symbols.rs  thread_report_flag.rs  trees.rs  types_ext.rs  unwind_protect.rs  variadic_maps.rs  windows_ffi.rs  windows_flag.rs  windows_pack.rs  xp.rs  xp_ansi.rs  xp_format.rs
tests/seh-unwind/: README.md  deep-panic.lisp  exit-test.lisp  panic-test.lisp  preempt-full.lisp  preempt-test.lisp
tools/: Start-Gui.ps1
