[package]
name = "ncl-cl"
version = "0.0.0"
edition = "2024"

# Lisp-side Common Lisp standard library lives in the sibling Lisp\
# directory (.lisp files). This crate is the Rust-side glue that
# registers the small set of stdlib pieces that must be implemented
# natively (e.g. some numeric primitives, condition machinery).

[dependencies]
ncl-runtime = { path = "../ncl-runtime" }

[lints]
workspace = true
