[package]
name = "ncl-cl"
version = "0.0.0"
edition = "2024"

# Lisp-side Common Lisp standard library lives in the sibling Lisp\
# directory (.lisp files). This crate is the Rust-side glue that
# registers the small set of stdlib pieces that must be implemented
# natively (e.g. some numeric primitives, condition machinery).

[features]
# Forward the GC backend choice to ncl-runtime so a single
# workspace-level feature flag selects across every dependent
# crate. See `ncl-runtime/src/gc.rs` for the underlying mechanism.
default = ["gc-page-heap"]
gc-page-heap = ["ncl-runtime/gc-page-heap"]

[dependencies]
ncl-runtime = { path = "../ncl-runtime", default-features = false }

[lints]
workspace = true
