[package]
name = "ncl-driver"
version = "0.0.0"
edition = "2024"

[[bin]]
name = "ncl"
path = "src/main.rs"

[features]
# Page-heap is the one and only GC backend. The gc-page-heap feature
# propagates to every dependent crate in one shot.
default = ["gc-page-heap"]
gc-page-heap = [
    "ncl-runtime/gc-page-heap",
    "ncl-cl/gc-page-heap",
    "ncl-compiler/gc-page-heap",
    "ncl-llvm/gc-page-heap",
    "ncl-loader/gc-page-heap",
    "ncl-reader/gc-page-heap",
]

[dependencies]
ncl-cl = { path = "../ncl-cl", default-features = false }
ncl-compiler = { path = "../ncl-compiler", default-features = false }
ncl-ir = { path = "../ncl-ir" }
ncl-llvm = { path = "../ncl-llvm", default-features = false }
ncl-loader = { path = "../ncl-loader", default-features = false }
ncl-reader = { path = "../ncl-reader", default-features = false }
ncl-runtime = { path = "../ncl-runtime", default-features = false }

[lints]
workspace = true
