[package]
name = "ncl-llvm"
version = "0.0.0"
edition = "2024"

# Phase 2 brings up the JIT here. inkwell + llvm-sys deps land then;
# until then this crate is a stub so the workspace compiles without
# requiring an LLVM install.

[dependencies]
ncl-ir = { path = "../ncl-ir" }

[lints]
workspace = true
