[package]
name = "ncl-reader"
version = "0.0.0"
edition = "2024"

[features]
default = ["gc-semispace"]
gc-semispace = ["ncl-runtime/gc-semispace"]
gc-page-heap = ["ncl-runtime/gc-page-heap"]

[dependencies]
ncl-runtime = { path = "../ncl-runtime", default-features = false }

[lints]
workspace = true
