[package]
name = "ncl-runtime"
version = "0.0.0"
edition = "2024"

# Windows-only iGui dependency surface — Direct2D / Direct3D 11 /
# DirectWrite plus the Win32 windowing layer. Versions tracked
# against the sister NewCP repo to keep the iGui port up to date.

[target.'cfg(windows)'.dependencies]
windows-numerics = "0.3"

[target.'cfg(windows)'.dependencies.windows]
version = "0.62"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_DirectWrite",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_System_Performance",
    "Win32_System_Threading",
    "Win32_UI_HiDpi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Controls",
    "Win32_UI_Controls_Dialogs",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_Ole",
]

[lints]
workspace = true
