[package]
name = "ncl-runtime"
version = "0.0.0"
edition = "2024"

[dependencies]
# Bignum kernel. We use it as the arithmetic engine but store
# limb data in our GC heap (see bignum.rs) — no Box<BigInt>
# leaks, no GC finalizer machinery needed. See docs/BIGNUMS.md
# for the rationale.
num-bigint = "0.4"
num-traits = "0.2"
num-integer = "0.1"
# Shortest-round-trip float printing. Replaces Dragon4 / Grisu /
# Steele-White with the simpler Ryū algorithm (Adams 2018).
ryu = "1.0"

# Windows-only iGui dependency surface — Direct2D / Direct3D 11 /
# DirectWrite plus the Win32 windowing layer. Versions tracked
# against the sister NewCP repo to keep the iGui port up to date.

[target.'cfg(windows)'.dependencies]
windows-numerics = "0.3"

[target.'cfg(windows)'.dependencies.windows]
version = "0.62"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_DirectWrite",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_System_Performance",
    "Win32_System_Threading",
    "Win32_UI_HiDpi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Controls",
    "Win32_UI_Controls_Dialogs",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_Ole",
]

[lints]
workspace = true
